# OpenHRIAudio

./: README.md  build_OpenHRIAudio.bat
cmake_files/cmake/: FindPortAudio.cmake  FindSpeex.cmake
forPortaudio/: build_portaudio.bat
forResample/: CMakeLists.txt  build_libresample.bat
forSpeex/: CMakeLists.txt  build_speex.bat
test/: PortAudioTest.bat  rtc.conf
